--- a/UI/codepulse/angular.json
+++ b/UI/codepulse/angular.json
@@ -29,7 +29,12 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "server": "src/main.server.ts",
+            "prerender": true,
+            "ssr": {
+              "entry": "server.ts"
+            }
           },
           "configurations": {
             "production": {
@@ -41,8 +46,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "2kB",
+                  "maximumError": "4kB"
                 }
               ],
               "outputHashing": "all"
@@ -92,8 +97,5 @@
         }
       }
     }
-  },
-  "cli": {
-    "analytics": "0bfcf06f-e216-4bec-8b81-56b4b6e03748"
   }
 }
